fix letter spacing

--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -20,7 +20,7 @@
 }
 @media screen and (min-width: 501px) and (max-width: 768px) {
     .place__title {
-        max-width: 340px;
+        max-width: 330px;
         margin-left: 0;
         display: grid;
         font-size: 42px;
